commented out js

--- a/html/index.html
+++ b/html/index.html
@@ -52,8 +52,8 @@
 				</div>
 			<div>
 		</main>
-		
+		<!--
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.2.1/axios.min.js"></script>
-		<script src="/js/home-page.js"></script>
+		<script src="/js/home-page.js"></script>-->
 	</body>
 </html>
