changed file paths to the hosted paths

--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
 	<head>
 		<title>SpotiTube</title>
-		<link rel="stylesheet" href="/css/header.css">
-		<link rel="stylesheet" href="/css/main.css">
-		<link rel="stylesheet" href="/css/general.css">
+		<link rel="stylesheet" href="https://danboonedev.github.io/SpotiTube/css/header.css">
+		<link rel="stylesheet" href="https://danboonedev.github.io/SpotiTube/css/main.css">
+		<link rel="stylesheet" href="https://danboonedev.github.io/SpotiTube/css/general.css">
 	</head>
 	<body>
 		<header>
@@ -38,7 +38,7 @@
 			<div class="main-flex-box">
 				<div class="spotify-section">
 					<div id="spotify-login-container">
-						<img class="spotify-logo" src="/icons/Spotify_Logo_RGB_Green.png" alt="">
+						<img class="spotify-logo" src="https://danboonedev.github.io/SpotiTube/icons/Spotify_Logo_RGB_Green.png" alt="">
 						<button id="spotify-login-button">
 							Login
 						</button>
@@ -47,13 +47,13 @@
 				</div>
 				<div class="youtube-section">
 					<img class="youtube-logo" 
-					src="/icons/youtube-logo.jpeg" alt="">
+					src="https://danboonedev.github.io/SpotiTube/icons/youtube-logo.jpeg" alt="">
 					<button id="youtube-login-button">Login</button>
 				</div>
 			<div>
 		</main>
 		
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.2.1/axios.min.js"></script>
-		<script src="/js/home-page.js"></script>
+		<script src="https://danboonedev.github.io/SpotiTube/js/home-page.js"></script>
 	</body>
 </html>
