added get playlists button

--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
 				<div>
 					<button class="hamburger-button">
 						<img class="hamburger-icon" 
-						src="/icons/hamburger-menu.svg" alt="">
+						src="https://danboonedev.github.io/SpotiTube/icons/hamburger-menu.svg" alt="">
 					</button>
 					<button class="spotitube-button">
 						<img class="spotitube-logo" 
-						src="/icons/spotitube.png" alt="">
+						src="https://danboonedev.github.io/SpotiTube/icons/spotitube.png" alt="">
 					</button>
 				</div>
 				<div class="header-right-section">
 					<button class="profile-button">
-						<img class="profile-image" src="/icons/profile-pic.jpeg" alt="">
+						<img class="profile-image" src="https://danboonedev.github.io/SpotiTube/icons/profile-pic.jpeg" alt="">
 					</button>
 				</div>
 			</div>
@@ -42,6 +42,7 @@
 						<button id="spotify-login-button">
 							Login
 						</button>
+						<button id="spotify-playlists-button">Get Playlists</button>
 					</div>
 
 				</div>
